--- a/index.html
+++ b/index.html
@@ -110,11 +110,43 @@
           <div class="home__content grid">
             <div class="home__social">
               <a
+                href="https://www.facebook.com/sb.shahan"
+                target="_blank"
+                class="home__social-icon"
+              >
+                <i class="fa-brands fa-facebook"></i>
+              </a>
+
+              <a
+                href="https://www.instagram.com/sb.shahan"
+                target="_blank"
+                class="home__social-icon"
+              >
+                <i class="fa-brands fa-square-instagram"></i>
+              </a>
+
+              <a
+                href="https://twitter.com/sb_shahan"
+                target="_blank"
+                class="home__social-icon"
+              >
+                <i class="fa-brands fa-square-x-twitter"></i>
+              </a>
+
+              <a
+                href="https://www.youtube.com/@sb.shahan"
+                target="_blank"
+                class="home__social-icon"
+              >
+                <i class="fa-brands fa-square-youtube"></i>
+              </a>
+
+              <a
                 href="https://www.linkedin.com/in/sb-shahan"
                 target="_blank"
                 class="home__social-icon"
               >
-                <i class="uil uil-linkedin-alt"></i>
+                <i class="fa-brands fa-linkedin"></i>
               </a>
 
               <a
@@ -122,7 +154,7 @@
                 target="_blank"
                 class="home__social-icon"
               >
-                <i class="uil uil-github-alt"></i>
+                <i class="fa-brands fa-github"></i>
               </a>
             </div>
 
@@ -464,7 +496,8 @@
               <div class="qualification__data">
                 <div></div>
                 <div>
-                  <span class="qualification__rounder"></span>
+                  <span class="qualification__rounder"> </span>
+                  <span class="qualification__line"></span>
                 </div>
 
                 <div>
@@ -483,6 +516,58 @@
                   <div class="qualification__calendar">
                     <i class="uil uil-calendar-alt"></i>
                     2015-2016
+                  </div>
+                </div>
+              </div>
+
+              <div class="qualification__data">
+                <div>
+                  <h3 class="qualification__title">
+                    HIGHER SECONDARY CERTIFICATE EXAMINATION (Business Studies)
+                  </h3>
+                  <span class="qualification__subtitle">
+                    <a
+                      href="https://www.corsi.univr.it/?ent=cs&id=769"
+                      target="_blank"
+                      >Kazi Alauddin College</a
+                    >
+                    <br />
+                    <h5>GPA 3.20</h5>
+                  </span>
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    2014
+                  </div>
+                </div>
+
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <span class="qualification__line"></span>
+                </div>
+              </div>
+
+              <div class="qualification__data">
+                <div></div>
+                <div>
+                  <span class="qualification__rounder"></span>
+                </div>
+
+                <div>
+                  <h3 class="qualification__title">
+                    SECONDARY SCHOOL CERTIFICATE (Business Studies)
+                  </h3>
+                  <span class="qualification__subtitle">
+                    <a
+                      href="https://web.dmi.unict.it/corsi/l-31"
+                      target="_blank"
+                      >B.T.G.R Secondary School
+                    </a>
+                    <br />
+                    <h5>GPA 3.19</h5>
+                  </span>
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    2012
                   </div>
                 </div>
               </div>
@@ -822,7 +907,7 @@
               </div>
             </div>
 
-            <form
+            <!--       <form
               action="https://formspree.io/f/xbjwkqok"
               method="POST"
               class="contact__form grid"
@@ -891,7 +976,7 @@
                   <i class="uil uil-message button__icon"></i>
                 </button>
               </div>
-            </form>
+            </form> -->
           </div>
         </div>
       </section>
