--- a/index.html
+++ b/index.html
@@ -435,6 +435,54 @@
                 </div>
               </div>
             </div>
+
+            <!--====================== Other Skills =============================-->
+            <div class="skills__content skills__open">
+              <div class="skills__header">
+                <i class="fa-brands fa-ethereum skills__icon"></i>
+
+                <div>
+                  <h1 class="skills__title">Other</h1>
+                  <span class="skills__subtitle"
+                    >Different levels of experience</span
+                  >
+                </div>
+
+                <i class="uil uil-angle-down skills__arrow"></i>
+              </div>
+
+              <div class="skills__list grid">
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <h3 class="skills__name">Canva</h3>
+                    <div class="skills__number">80%</div>
+                  </div>
+                  <div class="skills__bar">
+                    <div class="skills__percentage" style="width: 80%"></div>
+                  </div>
+                </div>
+
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <h3 class="skills__name">HTML, CSS</h3>
+                    <div class="skills__number">60%</div>
+                  </div>
+                  <div class="skills__bar">
+                    <div class="skills__percentage" style="width: 60%"></div>
+                  </div>
+                </div>
+
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <h3 class="skills__name">Audacity</h3>
+                    <div class="skills__number">50%</div>
+                  </div>
+                  <div class="skills__bar">
+                    <div class="skills__percentage" style="width: 50%"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
