--- a/index.html
+++ b/index.html
@@ -118,6 +118,14 @@
               </a>
 
               <a
+                href="https://alfafaa.com/members/sb-shahan"
+                target="_blank"
+                class="home__social-icon"
+              >
+                <i class="fa-solid fa-mosque"></i>
+              </a>
+              
+              <a
                 href="https://www.instagram.com/sb.shahan"
                 target="_blank"
                 class="home__social-icon"
@@ -255,7 +263,7 @@
             <div class="about__buttons">
               <a
                 download=""
-                href="assets/pdf/Md. Shahan Babu MBA Same Address.pdf"
+                href="/assets/pdf/CV.pdf"
                 class="button button--flex"
               >
                 Download CV <i class="uil uil-download-alt button__icon"></i>
