--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                       >Azam Khan Govt. Commerce College, Khulna</a
                     >
                     <br />
-                    <h5>Upcoming</h5>
+                    <h5>CGPA 2.63</h5>
                   </span>
                   <div class="qualification__calendar">
                     <i class="uil uil-calendar-alt"></i>
