--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               </a>
 
               <a
-                href="https://www.youtube.com/@sb.shahan"
+                href="https://www.youtube.com/@mdshahanbabuofficial"
                 target="_blank"
                 class="home__social-icon"
               >
