--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <meta
       name="description"
-      content="Shahan Babu - Business Management Specialist. Explore my expertise in data science and bioinformatics."
+      content="Shahan Babu - Business Management Specialist. Digital Marketing Expert. Explore my expertise in data science and bioinformatics."
     />
     <!--==================== UNICONS ====================-->
     <link
