--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
               </a>
 
               <a
-                href="https://github.com/sb-shahan"
+                href="https://github.com/MdShahanOfficial"
                 target="_blank"
                 class="home__social-icon"
               >
