--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     />
     <meta
       name="description"
-      content="Shahan Babu - Business Management Specialist. Digital Marketing Expert. Explore my expertise in data science and bioinformatics."
+      content="Shahan Babu - Business Management Specialist | Digital Marketing Expert. Explore my expertise in data science and bioinformatics."
+    />
+    content="Shahan Babu - Digital Marketing Expert"
     />
     <!--==================== UNICONS ====================-->
     <link
@@ -110,7 +112,7 @@
           <div class="home__content grid">
             <div class="home__social">
               <a
-                href="https://www.facebook.com/sb.shahan"
+                href="https://www.facebook.com/MdShahanBabuOfficial"
                 target="_blank"
                 class="home__social-icon"
               >
@@ -118,7 +120,7 @@
               </a>
 
               <a
-                href="https://alfafaa.com/members/sb-shahan"
+                href="https://alfafaa.com/members/mdshahanbabuofficial"
                 target="_blank"
                 class="home__social-icon"
               >
@@ -126,7 +128,7 @@
               </a>
               
               <a
-                href="https://www.instagram.com/sb.shahan"
+                href="https://www.instagram.com/mdshahanbabuofficial/"
                 target="_blank"
                 class="home__social-icon"
               >
@@ -134,7 +136,7 @@
               </a>
 
               <a
-                href="https://twitter.com/sb_shahan"
+                href="https://x.com/ShahanBOfficial"
                 target="_blank"
                 class="home__social-icon"
               >
@@ -150,7 +152,7 @@
               </a>
 
               <a
-                href="https://www.linkedin.com/in/sb-shahan"
+                href="https://www.linkedin.com/in/mdshahanbabuofficial/"
                 target="_blank"
                 class="home__social-icon"
               >
