--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
               </a>
 
               <a
-                href="https://github.com/MdShahanOfficial"
+                href="https://github.com/MdShahanBabuOfficial"
                 target="_blank"
                 class="home__social-icon"
               >
