--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       name="description"
       content="Shahan Babu - Business Management Specialist | Digital Marketing Expert. Explore my expertise in data science and bioinformatics."
     />
+    <meta
+      name="description"
     content="Shahan Babu - Digital Marketing Expert"
     />
     <!--==================== UNICONS ====================-->
@@ -120,7 +122,7 @@
               </a>
 
               <a
-                href="https://alfafaa.com/members/mdshahanbabuofficial"
+                href="https://alfafaa.com/members/mdshahanbabuofficial/"
                 target="_blank"
                 class="home__social-icon"
               >
