--- a/index.html
+++ b/index.html
@@ -8,14 +8,6 @@
       href="./assets/img/shahan.ico"
       type="image/x-icon"
     />
-    <meta
-      name="description"
-      content="Shahan Babu - Business Management Specialist | Digital Marketing Expert. Explore my expertise in data science and bioinformatics."
-    />
-    <meta
-      name="description"
-    content="Shahan Babu - Digital Marketing Expert"
-    />
     <!--==================== UNICONS ====================-->
     <link
       rel="stylesheet"
@@ -146,7 +138,7 @@
               </a>
 
               <a
-                href="https://www.youtube.com/@mdshahanbabuofficial"
+                href="https://www.youtube.com/@MdShahanBabuOfficial"
                 target="_blank"
                 class="home__social-icon"
               >
