--- a/index.html
+++ b/index.html
@@ -86,6 +86,14 @@
       <div class="home__container container grid">
         <div class="home__content grid">
           <div class="home__social">
+            <a href="https://linkedin.com/in/mdshahanbabuofficial/" target="_blank" class="home__social-icon">
+              <i class="fa-brands fa-linkedin"></i>
+            </a>
+
+            <a href="https://x.com/ShahanBOfficial" target="_blank" class="home__social-icon">
+              <i class="fa-brands fa-square-x-twitter"></i>
+            </a>
+
             <a href="https://www.facebook.com/MdShahanBabuOfficial" target="_blank" class="home__social-icon">
               <i class="fa-brands fa-facebook"></i>
             </a>
@@ -94,24 +102,16 @@
               <i class="fa-brands fa-square-instagram"></i>
             </a>
 
-            <a href="https://x.com/ShahanBOfficial" target="_blank" class="home__social-icon">
-              <i class="fa-brands fa-square-x-twitter"></i>
-            </a>
-
             <a href="https://youtube.com/@MdShahanBabuOfficial" target="_blank" class="home__social-icon">
               <i class="fa-brands fa-square-youtube"></i>
             </a>
 
-            <a href="https://linkedin.com/in/mdshahanbabuofficial/" target="_blank" class="home__social-icon">
-              <i class="fa-brands fa-linkedin"></i>
+            <a href="https://tiktok.com/@mdshahanbabuofficial" target="_blank" class="home__social-icon">
+              <i class="fa-brands fa-tiktok"></i>
             </a>
 
             <a href="https://github.com/MdShahanBabuOfficial" target="_blank" class="home__social-icon">
               <i class="fa-brands fa-github"></i>
-            </a>
-
-            <a href="https://tiktok.com/@mdshahanbabuofficial" target="_blank" class="home__social-icon">
-              <i class="fa-brands fa-tiktok"></i>
             </a>
           </div>
 
@@ -213,6 +213,73 @@
 
       <div class="skills__container container grid">
         <div>
+          <!--====================== Digital Marketing Skills =============================-->
+          <div class="skills__content skills__open">
+            <div class="skills__header">
+              <i class="fa-solid fa-magnifying-glass-chart skills__icon"></i>
+
+              <div>
+                <h1 class="skills__title">Digital Marketing</h1>
+                <span class="skills__subtitle">Several years of experience</span>
+              </div>
+
+              <i class="uil uil-angle-down skills__arrow"></i>
+            </div>
+
+            <div class="skills__list grid">
+              <div class="skills__data">
+                <div class="skills__titles">
+                  <h3 class="skills__name">SEO Expert</h3>
+                  <div class="skills__number">99%</div>
+                </div>
+                <div class="skills__bar">
+                  <div class="skills__percentage" style="width: 99%"></div>
+                </div>
+              </div>
+
+              <div class="skills__data">
+                <div class="skills__titles">
+                  <h3 class="skills__name">Email Marketing</h3>
+                  <div class="skills__number">97%</div>
+                </div>
+                <div class="skills__bar">
+                  <div class="skills__percentage" style="width: 97%"></div>
+                </div>
+              </div>
+
+              <div class="skills__data">
+                <div class="skills__titles">
+                  <h3 class="skills__name">Social Media Marketing/Management</h3>
+                  <div class="skills__number">96%</div>
+                </div>
+                <div class="skills__bar">
+                  <div class="skills__percentage" style="width: 96%"></div>
+                </div>
+              </div>
+
+              <div class="skills__data">
+                <div class="skills__titles">
+                  <h3 class="skills__name">Google/Meta Ads/AdWords</h3>
+                  <div class="skills__number">95%</div>
+                </div>
+                <div class="skills__bar">
+                  <div class="skills__percentage" style="width: 95%"></div>
+                </div>
+              </div>
+
+
+              <div class="skills__data">
+                <div class="skills__titles">
+                  <h3 class="skills__name">Thumbnail/Logo Design</h3>
+                  <div class="skills__number">95%</div>
+                </div>
+                <div class="skills__bar">
+                  <div class="skills__percentage" style="width: 95%"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <!--====================== Microsoft Skills =============================-->
           <div class="skills__content skills__open">
             <div class="skills__header">
@@ -931,9 +998,15 @@
   <footer class="footer" id="footer">
     <div class="footer__bg">
       <div class="footer__container container grid">
-        <div style="display: flex; flex-direction: column; align-items: center">
+        <div>
           <h2 class="footer__title">Shahan Babu</h2>
-          <span class="footer__subtitle">Business Management Specialist</span>
+          <h4 class="footer__subtitle">
+            Digital Marketing expert
+            <br>
+            SEO || Social Media Manager || Email Marketing ||
+            <br>
+            SEM || Ads Manager || Lead Generation || Google Ads
+          </h4>
         </div>
 
         <ul class="footer__links" style="align-self: center">
@@ -947,11 +1020,11 @@
         </ul>
 
         <div class="footer__socials" style="align-self: center">
-          <a href="https://twitter.com/sb_shahan" class="footer__social" target="_blank">
+          <a href="https://x.com/ShahanBOfficial" class="footer__social" target="_blank">
             <i class="uil uil-twitter-alt"></i>
           </a>
 
-          <a href="https://www.linkedin.com/in/sb-shahan/" target="_blank" class="footer__social">
+          <a href="https://linkedin.com/in/mdshahanbabuofficial" target="_blank" class="footer__social">
             <i class="uil uil-linkedin-alt"></i>
           </a>
         </div>
