--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
             <a href="https://github.com/MdShahanBabuOfficial" target="_blank" class="home__social-icon">
               <i class="fa-brands fa-github"></i>
             </a>
+
+            <a href="https://shahanbabu.my.canva.site" target="_blank" class="home__social-icon">
+              <i class="fa-solid fa-user-tie"></i>
+            </a>
           </div>
 
           <div class="home__img">
@@ -1028,6 +1032,13 @@
             <i class="uil uil-linkedin-alt"></i>
           </a>
         </div>
+      </div>
+
+      <div
+        style="display: flex; align-items: center; justify-content: center; gap: 0.5em; width: 100%; margin-block: 2rem;font-size: 0.8rem; color: wheat;">
+        Digital Marketing Portfolio: <a href="https://shahanbabu.my.canva.site" style="color: inherit;">
+          shahanbabu.my.canva.site
+        </a>
       </div>
 
       <p class="footer__copy" style="margin-top: 10px">
